Fixed flickering bug for slider New functionality for slider

--- a/src/Slider.css
+++ b/src/Slider.css
@@ -16,7 +16,3 @@
     position: relative;
     overflow: hidden;
 }
-
-.card-wrapper {
-    position: absolute;
-}
